<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_main" android:icon="@drawable/ic_main"
            android:title="@string/title_section1"/>
        <item android:id="@+id/nav_heart" android:icon="@drawable/ic_heart"
            android:title="@string/title_section2"/>
        <item android:id="@+id/nav_stack" android:icon="@drawable/ic_stack"
            android:title="@string/title_section3"/>
    </group>

    <item android:title="Setting">
        <menu>
            <item android:id="@+id/nav_language" android:icon="@drawable/ic_language"
                android:title="@string/title_section4"/>
            <item android:id="@+id/nav_about" android:icon="@drawable/ic_about"
                android:title="@string/title_section5"/>
            <item android:id="@+id/nav_buy" android:icon="@drawable/ic_buy"
                android:title="@string/title_section6"/>
        </menu>
    </item>

</menu>